Overflow on table to fix boundary break

--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -15,7 +15,7 @@ body,
 html {
     margin: 0;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     font-family: 'Poppins', sans-serif;
     background-color: $paletteWhite;
@@ -23,7 +23,7 @@ html {
 
 body {
     background-image: url("../Assets/Images/grassTexture75");
-    //background-repeat: no-repeat;
+    background-repeat: repeat-x repeat-y;
     background-position: center;
 }
 
